name:              tut
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Katsutoshi Itoh
maintainer:        Katsutoshi Itoh
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://tut.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Root

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

executable         tut
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded -O0

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 0.10
                 , persistent-sqlite     >= 0.9        && < 0.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3
                 , blaze-html                    >= 0.4        && < 0.5
